REMS-Salesforce/force-app/main/default/objects/Prescription__c/fields/Dispens__c.field-meta.xml
<CustomField>
    <fullName>Dispens__c</fullName>
    <label>Dispensation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Dispensed</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>