REMS-Salesforce/force-app/main/default/objects/Prescription__c/fields/Drug_Strength_Dosage__c.field-meta.xml
<CustomField>
    <fullName>Drug_Strength_Dosage__c</fullName>
    <label>Drug Strength/Dosage</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>