REMS-Salesforce/force-app/main/default/objects/Prescription__c/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prescriber</label>
    <referenceTo>Prescriber__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>