REMS-Salesforce/force-app/main/default/objects/Prescription__c/fields/Renewal_Needed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Needed?</label>
    <type>Checkbox</type>
</CustomField>